deploy/eks/argocd/base/tinder-app/profile-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-app
  namespace: tinder-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile-service-app
  template:
    metadata:
      labels:
        app: profile-service-app
    spec:
      containers:
        - name: profile-service-app
          image: profile-service:latest
          ports:
            - containerPort: 8082
