deploy/eks/argocd/base/tinder-app/profile-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: tinder-space
spec:
  type: ClusterIP
  selector:
    app: profile-service-app
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
